tests/ui/resolve/no-implicit-prelude.stderr
error[E0405]: cannot find trait `Add` in this scope
  --> $DIR/no-implicit-prelude.rs:10:6
   |
LL | impl Add for Test {}
   |      ^^^ not found in this scope
   |
help: consider importing this trait
   |
LL + use std::ops::Add;
   |

error[E0404]: expected trait, found derive macro `Clone`
  --> $DIR/no-implicit-prelude.rs:11:6
   |
LL | impl Clone for Test {}
   |      ^^^^^ not a trait
   |
help: consider importing this trait instead
   |
LL + use std::clone::Clone;
   |

error[E0405]: cannot find trait `Iterator` in this scope
  --> $DIR/no-implicit-prelude.rs:12:6
   |
LL | impl Iterator for Test {}
   |      ^^^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
LL + use std::iter::Iterator;
   |

error[E0405]: cannot find trait `ToString` in this scope
  --> $DIR/no-implicit-prelude.rs:13:6
   |
LL | impl ToString for Test {}
   |      ^^^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
LL + use std::string::ToString;
   |

error[E0405]: cannot find trait `Writer` in this scope
  --> $DIR/no-implicit-prelude.rs:14:6
   |
LL | impl Writer for Test {}
   |      ^^^^^^ not found in this scope

error[E0425]: cannot find function `drop` in this scope
  --> $DIR/no-implicit-prelude.rs:17:5
   |
LL |     drop(2)
   |     ^^^^ not found in this scope
   |
help: consider importing this function
   |
LL + use std::mem::drop;
   |

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0404, E0405, E0425.
For more information about an error, try `rustc --explain E0404`.
